--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
 				</div> <!-- user -->
 
 
-				<nav class="nav">
-					<a class="nav__link active" href="#">WORK</a>
+				<nav class="nav" id="nav">
+					<a class="nav__link" href="#">WORK</a>
 					<a class="nav__link" href="#">ABOUT ME</a>
 					<a class="nav__link" href="#">BLOG</a>
 					<a class="nav__link" href="#">CONTACT</a>
 					<a class="nav__link btn" href="#" data-modal="modal_hire_me">HIRE ME</a>
 				</nav>
 
-				<div class="burger">
+				<div class="burger" id="burger">
 
 					<img class="burger-img" src="img/burger_nav/menu.svg" alt="">
 
@@ -278,22 +278,32 @@
 						pellentesque eu enim eget luctus. Sed augue felis,
 						facilisis et elementum vitae, aliquam sit amet ante. Sed iaculis eros sem, elementum consequat
 						est consequat eu. Quisque
-						aliquet a ipsum nec tincidunt. Nulla vitae rhoncus leo. Praesent dui sapien, bibendum quis
+						aliquet a ipsum nec tincidunt.<br> Nulla vitae rhoncus leo. Praesent dui sapien, bibendum quis
 						tempus dictum, auctor ac dui.
 						Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Donec at
 						mauris porta,
-						ullamcorper sem quis, lobortis sem. Donec sit amet aliquet dui, at varius est. Phasellus
+						ullamcorper sem quis, lobortis sem. Donec sit amet aliquet dui, at varius est.<br>
+
+						Phasellus
 						porttitor finibus neque vel
 						vehicula. Duis in nulla egestas, dignissim elit at, imperdiet eros. Integer tristique posuere
 						purus. Suspendisse
 						placerat, quam vitae ullamcorper sollicitudin, dui ligula molestie massa, sit amet laoreet nibh
-						ex vitae dui. Aenean
+						ex vitae dui.<br>
+
+						Aenean
 						laoreet pellentesque lacus, eget varius massa mattis quis. Nunc ultrices urna eu nunc lobortis
 						pulvinar. Duis viverra,
 						quam non imperdiet scelerisque, urna nunc consequat velit, in mollis erat nibh in libero.</p>
 
-					<a class="button right" href="#" data-modal="modal_hire_me">HIRE ME</a>
-					<button class="button left" href="#" type="button" data-modal="modal_resume">SEE MY RESUME</button>
+
+					<div class="button__wrap">
+						<a class="button right" href="#" data-modal="modal_hire_me">HIRE ME</a>
+
+						<button class="button left" href="#" type="button" data-modal="modal_resume">SEE MY
+							RESUME</button>
+					</div>
+
 				</div>
 
 			</div><!-- about -->
